--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "lodash.debounce": "^4.0.8",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
