--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.5",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "lodash.debounce": "^4.0.8",
