--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-ga4": "^2.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
