--- a/vercel.json
+++ b/vercel.json
@@ -28,6 +28,33 @@
                     "value": "application/xml"
                 }
             ]
+        },
+        {
+            "source": "/assets/(.*)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=31536000, immutable"
+                }
+            ]
+        },
+        {
+            "source": "/(.*).(css|js|woff2|svg|png|jpg|jpeg|webp|gif|ico)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=31536000, immutable"
+                }
+            ]
+        },
+        {
+            "source": "/",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=60, stale-while-revalidate=300"
+                }
+            ]
         }
     ]
 }
